# spruce

./: CMakeLists.txt  LICENSE.txt  README.md
data/: README.md  convert.py
data/real/: A22.intervals  A22.tsv  gundem_colors.txt
data/sims/n_15_noisy/: sims_r0_m10_n15_c1000.data  sims_r0_m10_n15_c1000.true  sims_r0_m10_n15_c1000.true.edgelist  sims_r10_m10_n15_c1000.data  sims_r10_m10_n15_c1000.true  sims_r10_m10_n15_c1000.true.edgelist  sims_r11_m10_n15_c1000.data  sims_r11_m10_n15_c1000.true  sims_r11_m10_n15_c1000.true.edgelist  sims_r12_m10_n15_c1000.data  sims_r12_m10_n15_c1000.true  sims_r12_m10_n15_c1000.true.edgelist  sims_r13_m10_n15_c1000.data  sims_r13_m10_n15_c1000.true  sims_r13_m10_n15_c1000.true.edgelist  sims_r14_m10_n15_c1000.data  sims_r14_m10_n15_c1000.true  sims_r14_m10_n15_c1000.true.edgelist  sims_r15_m10_n15_c1000.data  sims_r15_m10_n15_c1000.true  sims_r15_m10_n15_c1000.true.edgelist  sims_r16_m10_n15_c1000.data  sims_r16_m10_n15_c1000.true  sims_r16_m10_n15_c1000.true.edgelist  sims_r17_m10_n15_c1000.data  sims_r17_m10_n15_c1000.true  sims_r17_m10_n15_c1000.true.edgelist  sims_r18_m10_n15_c1000.data  sims_r18_m10_n15_c1000.true  sims_r18_m10_n15_c1000.true.edgelist  sims_r19_m10_n15_c1000.data  sims_r19_m10_n15_c1000.true  sims_r19_m10_n15_c1000.true.edgelist  sims_r1_m10_n15_c1000.data  sims_r1_m10_n15_c1000.true  sims_r1_m10_n15_c1000.true.edgelist  sims_r2_m10_n15_c1000.data  sims_r2_m10_n15_c1000.true  sims_r2_m10_n15_c1000.true.edgelist  sims_r3_m10_n15_c1000.data  (+20 more)
data/sims/n_5_inf_alleles_violations/: sims_r0_m10_n5_c1000_v0.data  sims_r0_m10_n5_c1000_v0.true  sims_r0_m10_n5_c1000_v1.data  sims_r0_m10_n5_c1000_v1.true  sims_r0_m10_n5_c1000_v2.data  sims_r0_m10_n5_c1000_v2.true  sims_r0_m10_n5_c1000_v3.data  sims_r0_m10_n5_c1000_v3.true  sims_r0_m10_n5_c1000_v4.data  sims_r0_m10_n5_c1000_v4.true  sims_r0_m10_n5_c1000_v5.data  sims_r0_m10_n5_c1000_v5.true  sims_r10_m10_n5_c1000_v0.data  sims_r10_m10_n5_c1000_v0.true  sims_r10_m10_n5_c1000_v1.data  sims_r10_m10_n5_c1000_v1.true  sims_r10_m10_n5_c1000_v2.data  sims_r10_m10_n5_c1000_v2.true  sims_r10_m10_n5_c1000_v3.data  sims_r10_m10_n5_c1000_v3.true  sims_r10_m10_n5_c1000_v4.data  sims_r10_m10_n5_c1000_v4.true  sims_r10_m10_n5_c1000_v5.data  sims_r10_m10_n5_c1000_v5.true  sims_r11_m10_n5_c1000_v0.data  sims_r11_m10_n5_c1000_v0.true  sims_r11_m10_n5_c1000_v1.data  sims_r11_m10_n5_c1000_v1.true  sims_r11_m10_n5_c1000_v2.data  sims_r11_m10_n5_c1000_v2.true  sims_r11_m10_n5_c1000_v3.data  sims_r11_m10_n5_c1000_v3.true  sims_r11_m10_n5_c1000_v4.data  sims_r11_m10_n5_c1000_v4.true  sims_r11_m10_n5_c1000_v5.data  sims_r11_m10_n5_c1000_v5.true  sims_r12_m10_n5_c1000_v0.data  sims_r12_m10_n5_c1000_v0.true  sims_r12_m10_n5_c1000_v1.data  sims_r12_m10_n5_c1000_v1.true  (+201 more)
data/sims/n_5_noisy/: sims_r0_m10_n5_c100.data  sims_r0_m10_n5_c1000.data  sims_r0_m10_n5_c1000.true  sims_r0_m10_n5_c10000.data  sims_r0_m10_n5_c50.data  sims_r0_m10_n5_c500.data  sims_r0_m10_n5_c500.true.edgelist  sims_r0_m2_n5_c100.data  sims_r0_m2_n5_c100.true  sims_r0_m2_n5_c1000.data  sims_r0_m2_n5_c10000.data  sims_r0_m2_n5_c50.data  sims_r0_m2_n5_c500.data  sims_r0_m5_n5_c100.data  sims_r0_m5_n5_c1000.data  sims_r0_m5_n5_c10000.data  sims_r0_m5_n5_c50.data  sims_r0_m5_n5_c50.true  sims_r0_m5_n5_c500.data  sims_r10_m10_n5_c100.data  sims_r10_m10_n5_c100.true  sims_r10_m10_n5_c1000.data  sims_r10_m10_n5_c10000.data  sims_r10_m10_n5_c50.data  sims_r10_m10_n5_c500.data  sims_r10_m2_n5_c100.data  sims_r10_m2_n5_c1000.data  sims_r10_m2_n5_c10000.data  sims_r10_m2_n5_c50.data  sims_r10_m2_n5_c500.data  sims_r10_m5_n5_c100.data  sims_r10_m5_n5_c100.true.edgelist  sims_r10_m5_n5_c1000.data  sims_r10_m5_n5_c10000.data  sims_r10_m5_n5_c50.data  sims_r10_m5_n5_c50.true  sims_r10_m5_n5_c500.data  sims_r11_m10_n5_c100.data  sims_r11_m10_n5_c1000.data  sims_r11_m10_n5_c1000.true.edgelist  (+330 more)
data/sims/n_5_perfect/: sims_r0_m10_n5.data  sims_r0_m2_n5.data  sims_r0_m5_n5.data  sims_r10_m10_n5.data  sims_r10_m2_n5.data  sims_r10_m2_n5.true  sims_r10_m5_n5.data  sims_r11_m10_n5.data  sims_r11_m2_n5.data  sims_r11_m5_n5.data  sims_r11_m5_n5.true  sims_r12_m10_n5.data  sims_r12_m2_n5.data  sims_r12_m5_n5.data  sims_r13_m10_n5.data  sims_r13_m2_n5.data  sims_r13_m5_n5.data  sims_r14_m10_n5.data  sims_r14_m2_n5.data  sims_r14_m5_n5.data  sims_r15_m10_n5.data  sims_r15_m2_n5.data  sims_r15_m5_n5.data  sims_r16_m10_n5.data  sims_r16_m2_n5.data  sims_r16_m5_n5.data  sims_r16_m5_n5.true  sims_r17_m10_n5.data  sims_r17_m10_n5.true.edgelist  sims_r17_m2_n5.data  sims_r17_m5_n5.data  sims_r18_m10_n5.data  sims_r18_m2_n5.data  sims_r18_m5_n5.data  sims_r19_m10_n5.data  sims_r19_m2_n5.data  sims_r19_m5_n5.data  sims_r1_m10_n5.data  sims_r1_m2_n5.data  sims_r1_m5_n5.data  (+30 more)
result/: README.md  process_noisy.py  process_perfect.py  run_A22.sh  run_sims.sh
result/A22/: A22_70_0.cliques  A22_70_1.cliques
src/: bronkerbosch.cpp  bronkerbosch.h  ccf.cpp  character.cpp  character.h  charactermatrix.cpp  charactermatrix.h  cliques.cpp  cnaenumerate.cpp  cnaenumerate.h  compatibilitygraph.cpp  compatibilitygraph.h  compatiblestatetrees.cpp  concordance.cpp  config.h  config.h.in  enum.cpp  matrix.cpp  matrix.h  merge.cpp  noisycnaenumerate.cpp  noisycnaenumerate.h  perfectphylomatrix.cpp  perfectphylomatrix.h  randomtree.cpp  rank.cpp  realmatrix.cpp  realmatrix.h  realtensor.cpp  realtensor.h  rootedancestrygraph.cpp  rootedancestrygraph.h  rootedcladisticancestrygraph.cpp  rootedcladisticancestrygraph.h  rootedcladisticenumeration.cpp  rootedcladisticenumeration.h  rootedcladisticfullancestrygraph.cpp  rootedcladisticfullancestrygraph.h  rootedcladisticnoisyancestrygraph.cpp  rootedcladisticnoisyancestrygraph.h  (+20 more)
src/python/: generateJSON.py
src/visualization/: README.md  body.txt  bower.json  footer.txt  generate.py  header.txt
src/visualization/bower_components/d3/: .bower.json
src/visualization/bower_components/jquery-bootpag/: .bower.json
